crates/pixi-build-python/src/snapshots/pixi_build_python__python__tests__scripts_are_respected.snap
---
source: crates/pixi-build-python/src/python.rs
expression: recipe
---
schema_version: 1
context: {}
package:
  name: test-scripts
  version: 1.2.3
source:
  - path: "[ ... path ... ]"
build:
  number: 0
  string: pyhbf21a9e_0
  script: "[ ... script ... ]"
  noarch: python
  python:
    entry_points:
      - "rich-example-main = rich_example:main"
requirements:
  host:
    - pip
    - python
