crates/pixi-build-python/src/snapshots/pixi_build_python__python__tests__setting_host_and_build_requirements.snap
---
source: crates/pixi-build-python/src/python.rs
expression: "(recipe, source_requirements)"
---
- schema_version: 1
  context: {}
  package:
    name: test-reqs
    version: 1.2.3
  source:
    - path: "C:\\Users\\bas\\AppData\\Local\\Temp\\.tmpM8HM0v"
  build:
    number: 0
    string: pyhbf21a9e_0
    script:
      - ""
      - "%PYTHON% -m pip install --ignore-installed -vv --no-deps --no-build-isolation %SRC_DIR%"
      - if errorlevel 1 exit 1
    noarch: python
  requirements:
    build:
      - boltons
    host:
      - hatchling
      - pip
      - python
    run:
      - foobar >=3.2.1
      - source
- build: {}
  host: {}
  run:
    source:
      Path:
        path: src
